--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>vue-manage-system后台管理系统</title>
+  <title>SnowFlake Blog Admin</title>
   <link rel="stylesheet" href="//at.alicdn.com/t/c/font_830376_92o68tc95je.css">
+    <link rel="icon" href="/src/assets/img/favicon.ico">
 </head>
 
 <body>
